Actualizaciones correcciones de memoria

--- a/Formato Memoria/Capitulo2/2.1.1_Conceptos.tex
+++ b/Formato Memoria/Capitulo2/2.1.1_Conceptos.tex
@@ -1,4 +1,4 @@
-Para profundizar lo explicado en la \textbf{Sección \ref{sec:Contexto}}~\emph{Contexto del problema}, es que se hace mención a los conceptos claves para la comprensión del proceso que rige la aplicación.
+Para mayor comprensión del \emph{Contexto del problema} esbozado en la \textbf{Sección \ref{sec:Contexto}}, se hace mención a los conceptos claves utilizados en el proceso que rige la aplicación.
 
 \paragraph{Evento}
 
@@ -6,7 +6,7 @@ Para profundizar lo explicado en la \textbf{Sección \ref{sec:Contexto}}~\emph{C
 
 \paragraph{Solicitud}
 
-  Una solicitud es un documento en el cual se pide ayuda económica a quien está a cargo de la Dirección de Escuela (en el caso de CAA) o a quien dirige la DAAE (en el caso de Federación) para llevar a cabo un evento organizado por la OE, en donde se debe detallar:
+  Una solicitud es un documento en el cual se pide ayuda económica a quien está a cargo de la Dirección de Escuela (en el caso de CCAA) o a quien dirige la DAAE (en el caso de Federación) para llevar a cabo un evento organizado por la OE, en donde se debe detallar:
 
   \begin{itemize}
       \item Nombre del evento.
@@ -20,20 +20,20 @@ Para profundizar lo explicado en la \textbf{Sección \ref{sec:Contexto}}~\emph{C
 
 \paragraph{Resolución Universitaria (RU)}
 
-  Una Resolución puede ser un decreto, una decisión o un fallo que emite una determinada autoridad. Estas pueden establecer reglas, voluntades, etc. Si bien, hay una gran variedad de resoluciones, en esta memoria cobra mayor interés las Resoluciones Universitarias en donde se decreta las trasferencias de fondos para llevar a cabo actividades por parte de las OE, al momento de que se acepta la solicitud enviada por éstas.
+  Una Resolución puede ser un decreto, una decisión o un fallo que emite una determinada autoridad. Esta puede establecer reglas, voluntades, etc. Si bien, hay una gran variedad de resoluciones, en esta memoria cobra mayor interés las Resoluciones Universitarias en donde se decreta las trasferencias de fondos para llevar a cabo actividades por parte de las OE.
 
-  En esta RU se menciona la suma que se transfiere a la OE, el propósito que se solventará con el dinero, el nombre del evento, la fecha en que ocurre la actividad, el lugar en que se realiza el evento y participantes en específicos en caso de haberlos. Además, se establece a quien serán dirigidos los dineros, en este caso al Presidente o Secretario de Finanzas de la OE.
+  En este tipo RU se menciona la suma que se transfiere a la OE, el propósito que se solventará con el dinero, el nombre del evento, la fecha en que ocurre la actividad, el lugar en que se realiza el evento y participantes en específicos en caso de haberlos. Además, se establece a quien serán dirigidos los dineros, en este caso al Presidente o Secretario de Finanzas de la OE.
 
-  Por otra parte, el código de una RU es la unión del año con su número de documento. 
+  Cabe notar que cada RU se identifica por su código, correspondiente a la unión del año con su número de documento.
 
   \paragraph{Rendición}
 
-  Una rendición es el documento en el cual se da cuenta detallada de todos los gastos que se realizaron en una actividad o evento realizado por la OE. En el encabezado del documento se debe indicar lo siguiente:
+  Una rendición es el documento en el cual se da cuenta detallada de todos los gastos que se realizaron en una actividad o evento realizado por la OE. En el encabezado del documento se debe indicar:
   \begin{enumerate*}[label=(\roman*)]
     \item número de resolución,
     \item unidad (por ejemplo, el nombre de la escuela),
     \item nombre Jefe Directo (por ejemplo, Director de Escuela),
-    \item responsable del fondo,
+    \item responsable del fondo (por ejemplo Presidente o Secretario de Finanzas),
     \item RUT del responsable,
     \item total solicitado,
     \item total rendido,
