--- a/Formato Memoria/Capitulo2/2.3_Metodologia_desarrollo.tex
+++ b/Formato Memoria/Capitulo2/2.3_Metodologia_desarrollo.tex
@@ -1,4 +1,4 @@
-La palabra metodología está compuesta por tres vocablos griegos, los cuales son: metá (``más allá''), odós (``camino'') y logos (``estudio''). Es por ello que al conjunto de medios que se pueden utilizar para llegar a un fin para luego determinar cuál es el más adecuado se le denomina metodología.
+La palabra metodología está compuesta por tres vocablos griegos, los cuales son: metá (``más allá''), odós (``camino'') y logos (``estudio''). Es por ello que del conjunto de medios que se pueden utilizar para conseguir un objetivo, una metodología determina cuales son los más adecuados.
 
 Las metodologías de desarrollo de software ayudan a estructurar, planificar y controlar el proceso de desarrollo de los sistemas de información, con el objetivo de resolver las siguientes preguntas:
 
@@ -11,7 +11,7 @@ Las metodologías de desarrollo de software ayudan a estructurar, planificar y c
 
 Este marco de trabajo es un modo sistemático de realizar, gestionar y administrar un proyecto con la posibilidad de llevarlo al éxito. Cada metodología de desarrollo de software tiene ciertas actividades las cuales ayudan a idear, implementar y mantener el producto de software, el cual surge de alguna necesidad hasta cumplir con el objetivo por el cual fue creado. Por lo último mencionado, se propuso la necesidad de metodizar el desarrollo de software, para lo cual se han hecho muchos esfuerzos para mejorarlo con el tiempo. Todo comenzó por los modelos carentes de disciplina y estándares, luego evolucionó a modelos estructurados centrados en el control del proceso (denominados metodologías tradicionales) y por último se dio paso a modelos iterativos y flexibles (metodologías ágiles).
 
-Existe una constante guerra para determinar qué tipo de metodología es mejor que la otra, pero surgen preguntas como: ¿existe una mejor que la otra? o ¿cuál de estas llevará al éxito? 
+Existe una constante guerra para determinar qué tipo de metodología es mejor que otra, pero surgen preguntas como: ¿existe una mejor que otra? o ¿cuál de ellas llevará al éxito? 
 
 Respondiendo a las últimas preguntas mencionadas, no existe una metodología mejor que otra ya que su elección también depende del proyecto en el que se utilicen. En efecto, factores tales como recursos técnicos y humanos, tiempo de desarrollo, tipo de sistema, etc. pueden condicionar la elección o aplicación de una metodología específica. Además, no existe metodología que asegure el éxito ya que todas pueden fracasar, lo importante es saber abordar los problemas y decidir qué tipo de metodología ocupar. Cada metodología posee algo bueno y en algunos casos se pueden mezclar, pero depende de las características del proyecto.
 
@@ -60,4 +60,4 @@ Respondiendo a las últimas preguntas mencionadas, no existe una metodología me
     \end{tabular}  
 \end{table}
 
-En cuanto a la elección de la metodología que se utiliza, existen un sinfín de factores que diferencia entre una y otra, tal como se puede apreciar en la \textbf{Figura~\ref{fig: dif_Metodologia}}  y en el \textbf{Cuadro~\ref{tab: tab_dif_Metodologia}}. Es por ello que dada esta información y principalmente por los factores tales como Cliente, Tamaño del equipo, Ciclos, Perspectiva al cambio y Enfoque es que se optó por elegir la Metodología Ágil de la cual se da mayor énfasis en el siguiente ítem de este documento.
+En cuanto a la elección de la metodología que se utiliza, existen un sinfín de factores que diferencia entre una y otra, tal como se puede apreciar en la \textbf{Figura~\ref{fig: dif_Metodologia}}  y en el \textbf{Cuadro~\ref{tab: tab_dif_Metodologia}}. Es por ello que dada esta información y principalmente por los factores tales como \emph{Cliente}, \emph{Tamaño del equipo}, \emph{Ciclos}, \emph{Perspectiva al cambio} y \emph{Enfoque} es que se optó por elegir una Metodología Ágil de la cual se da mayor detalle en el siguiente ítem de este documento.
