--- a/Formato Memoria/Capitulo2/2.4.1_Scrum.tex
+++ b/Formato Memoria/Capitulo2/2.4.1_Scrum.tex
@@ -4,7 +4,7 @@ Su objetivo principal es ser un proceso iterativo e incremental que ayuda a la g
 
 Scrum produce resultados en periodos cortos de tiempos (aproximadamente 30 días), delegando al equipo de trabajo la responsabilidad de escoger la mejor forma de trabajar.
 
-La clave del éxito de Scrum son los \emph{sprints}, los cuales pueden durar de dos a cuatro semanas, en donde al iniciar cada uno de estos, se seleccionan una lista de historias de usuarios (a esta lista se le conoce como backlog). Por otra parte, dentro del transcurso de cada iteración, diariamente se realizan breves reuniones de aproximadamente quince minutos, las que ayudan a conocer el avance del desarrollo del proceso.
+La clave del éxito de Scrum son los \emph{sprints}, los cuales pueden durar de dos a cuatro semanas, en donde al iniciar cada uno de estos, se selecciona una lista de historias de usuarios que serán resueltas en dicho sprint6 (a esta lista se le conoce como backlog). Por otra parte, dentro del transcurso de cada iteración, diariamente se realizan breves reuniones de aproximadamente quince minutos, las que ayudan a conocer el avance del desarrollo del proceso.
 
 Cabe destacar que las historias de usuarios son pequeñas descripciones de alguna funcionalidad que debe incorporar la aplicación. En la \textbf{Sección \ref{sec:Fases}} se da una explicación completa de lo que es una historia de usuario.
  
