--- a/Formato Memoria/Capitulo2/2.4.2_Roles.tex
+++ b/Formato Memoria/Capitulo2/2.4.2_Roles.tex
@@ -1,4 +1,4 @@
-Para llevar una correcta organización en la metodología se debe identificar las actividades que debe realizar cada persona que participa en el proyecto, tanto interna como externa (equipos de trabajo, usuarios e individuos que se relacionan de alguna forma con el proyecto). A este conjunto se le denomina roles.
+Para llevar una correcta organización en la metodología se debe identificar las actividades que debe realizar cada persona que participa en el proyecto, tanto de forma interna como externa (equipos de trabajo, usuarios e individuos que se relacionan de alguna forma con el proyecto). A este conjunto se le denomina roles.
 
 Una persona puede tener asignado uno o más roles y, a su vez, los roles pueden ser asignados a uno o más individuos. Cabe destacar que las asignaciones se hacen al comienzo del proyecto en base a las características de los sujetos y de los recursos que disponen. Es por ello que a continuación se explican los roles involucrados en el proyecto:
 
