--- a/Formato Memoria/Capitulo2/2.4.5_Reuniones.tex
+++ b/Formato Memoria/Capitulo2/2.4.5_Reuniones.tex
@@ -1,4 +1,4 @@
-En el proceso de Scrum, las reuniones son de suma importancia y en cada paso en el proceso existen tipos de reuniones con sus propias características. Las reuniones principales que destaca Scrum son: Planificación de sprint, Reunión diaria, Revisión del sprint y Reunión retrospectiva del sprint. En la \textbf{Figura~\ref{fig: reunionesScrum}} se ve el ciclo de Scrum desde el punto de vista de las reuniones.
+En el proceso de Scrum, las reuniones son de suma importancia y en cada paso en el proceso existen tipos de reuniones con sus propias características. Las reuniones principales que destaca Scrum son: \emph{Planificación de sprint}, \emph{Reunión diaria}, \emph{Revisión del sprint} y \emph{Reunión retrospectiva del sprint}. En la \textbf{Figura~\ref{fig: reunionesScrum}} se ve el ciclo de Scrum desde el punto de vista de las reuniones.
 
 \begin{figure}[ht!]
     \includegraphics[width=\textwidth]{Imagenes/Reuniones_Scrum.jpg}
