--- a/Formato Memoria/Capitulo3/3.1.2_Aplicacion.tex
+++ b/Formato Memoria/Capitulo3/3.1.2_Aplicacion.tex
@@ -1,6 +1,8 @@
 La aplicación solicitada permite asistir al proceso que una OE debe realizar para la solicitud de un fondo por rendir segun la RU N\grad 2083 del año 2017 (ver \textbf{Sección \ref{sec:Contexto}}).
 
-Si bien existe documentación de cómo realizar el proceso de fondo por rendir, es muy burocrático seguirlo al pie de la letra por las distintas OE, cometiendo muchos errores (sobre todo las nuevas OE que no tienen experiencia). Ahora, dado que las OE son los principales usuarios de la aplicación, es que los requerimientos del sistema son cambiantes en cuanto a la facilidad de uso, pero el objetivo principal que es cumplir con lo estipulado por la RU anteriormente mencionada se conserva. Además, es posible que los requisitos cambien a medida que avanza el proyecto. Es por ello por lo que son evaluados y aceptados siempre que su impacto no sea negativo, tanto en el desarrollo como en el tiempo que conlleva para así no atrasar la entrega.
+Si bien existe documentación de cómo realizar el proceso de fondo por rendir, es muy burocrático seguirlo al pie de la letra por las distintas OE, cometiendo muchos errores (sobre todo las nuevas OE que no tienen experiencia). 
+
+Aún cuando el objetivo principal que es cumplir con lo estipulado por la RU anteriormente mencionada se conserva, los requerimientos del sistema que tienen que ver con la facilidad de uso pueden sufrir modificaciones como resultado de las pruebas de usabilidad. Además, es posible que los requisitos cambien a medida que avanza el proyecto. Es por ello por lo que son evaluados y aceptados siempre que su impacto no sea negativo, tanto en el desarrollo como en el tiempo que conlleva para así no atrasar la entrega.
 
 El sistema ayuda a la confección y exportación a un archivo PDF que contiene una solicitud de fondos para realizar una actividad. En caso de ser aprobada esta última, se debe subir al sistema una copia digitalizada de la RU asignada para luego confeccionar la rendición del evento. Tras terminar la elaboración de la rendición, esta es exportada a un archivo PDF junto con un listado de las boletas y/o facturas que deben ser adjuntadas al documento. 
 
