--- a/Formato Memoria/Capitulo3/3.2.2.1_Proyecto.tex
+++ b/Formato Memoria/Capitulo3/3.2.2.1_Proyecto.tex
@@ -2,7 +2,7 @@ El nacimiento de este proyecto se inicia cuando el autor de esta memoria se encu
 
 Posteriormente, en el momento de la revisión de la rendición por parte del departamento de Tesorería, al primer error que se encontraba se detenía la revisión, se rechazaba la rendición y se notificaba ese error. Posiblemente, la rendición podía tener más errores de alguna boleta fuera de la fecha o de algún gasto incurrido en falta ya que no pertenecía a alguna de las categorías mencionadas en la solicitud, entre otras. Pero debido a que se detiene la revisión al primer error que encuentran, no enviaban toda información, por lo que la OE corregía sólo lo notificado y al momento de realizar la segunda revisión o más, si se encontraban nuevos errores, se volvía a rechazar. A consecuencia de lo anterior, demoraba la devolución del dinero e impedía que se realizaran nuevas actividades ya que existía una rendición pendiente de aprobación.
 
-Es por ello que el autor lo propuso como tema de memoria y al momento de ser aceptada, comienza con el proceso de formular el proyecto, realizando entrevistas para detectar las historias de usuarios y así tener una planificación general del proyecto, la cual podría modificarse a medida que avanza en este, ya que se podrían requerir nuevas funcionalidades o cambios de prioridades de funcionalidades requeridas con anterioridad. Finalmente, la organización de los sprints del proyecto sigue el proceso que conlleva realizar una Solicitud de Fondo por Rendir por parte de la OE, las cuales se mencionan a continuación:
+Es por ello que el autor lo propuso como tema de \emph{Proyecto de Titulación} y al momento de ser aceptada, comienza con el proceso de formular el proyecto, realizando entrevistas para detectar las historias de usuarios y así tener una planificación general del proyecto, la cual podría modificarse a medida que avanza en este, ya que se podrían requerir nuevas funcionalidades o cambios de prioridades de funcionalidades requeridas con anterioridad. Finalmente, la organización de los sprints del proyecto sigue el proceso que conlleva realizar una Solicitud de Fondo por Rendir por parte de la OE, las cuales se mencionan a continuación:
 
 \begin{enumerate}
     \item Solicitud.
@@ -14,7 +14,7 @@ Es por ello que el autor lo propuso como tema de memoria y al momento de ser ace
     \item Detalles.
 \end{enumerate}
 
-Por último, tras cumplir con todos los sprints mencionados anteriormente se realiza la entrega del producto y la puesta en marcha.
+Por último, tras cumplir con todos los sprints mencionados anteriormente se realiza la entrega del producto y la puesta en marcha para el mes de Octubre del 2019.
 
 
 
