--- a/Formato Memoria/Capitulo5/5.3.2_Arquitectura_logica.tex
+++ b/Formato Memoria/Capitulo5/5.3.2_Arquitectura_logica.tex
@@ -4,7 +4,7 @@
     \caption{\label{fig: Arquitectura_Logica}Arquitectura lógica del sistema.}
 \end{figure}
 
-Si bien se ha mencionado cómo es la arquitectura física que utiliza el sistema, en esta sección se habla acerca de la arquitectura lógica, la cual para efectos de esta memoria es \textbf{Modelo-Vista-Controlador (MVC)}. La elección de esta arquitectura se debe a que separa la interfaz de usuario de la lógica de negocio y el modelo de datos del sistema. Esto se realiza con el fin de evitar acoplamiento y facilitar los futuros mantenimientos dado que si se requiere de alguna modificación de una capa, las demás no se verán afectadas o en el caso de que se requiera el reemplazo completo de una capa, sólo se debe revisar las conexiones que tienen las demás capas a la que se está modificando para que funcione correctamente. Por ejemplo, cuando se requiere migrar la Base de datos, sólo se debe reemplazar los datos de conexión que se encuentran en la capa de Modelo y las otras capas no se verán afectadas. La \textbf{Figura \ref{sec:Arquitectura_Logica}} muestra la arquitectura lógica de la aplicación. A continuación se explica cada capa.
+Si bien se ha mencionado cómo es la arquitectura física que utiliza el sistema, en esta sección se habla acerca de su arquitectura lógica. Para esto se utiliza el \textbf{Modelo-Vista-Controlador (MVC)}. Esta arquitectura separa la interfaz de usuario de la lógica de negocio y el modelo de datos del sistema. Esto reduce el acoplamiento y facilita los futuros mantenimientos dado que si se requiere de alguna modificación de una capa, las demás no se verán afectadas o en el caso de que se requiera el reemplazo completo de una capa, sólo se debe revisar las conexiones que tienen las demás capas a la que se está modificando para que funcione correctamente. Por ejemplo, cuando se requiere migrar la Base de datos, sólo se debe reemplazar los datos de conexión que se encuentran en la capa de Modelo y las otras capas no se verán afectadas. La \textbf{Figura \ref{sec:Arquitectura_Logica}} muestra la arquitectura lógica de la aplicación. A continuación se explica cada capa.
 
 \begin{itemize}
     \item \textbf{Capa de Presentación: } Esta capa contempla todas las interfaces de usuario o vistas que posee el sistema. Cabe destacar que existen dos roles en el sistema, el de usuario común y el de administrador. Es por ello que la distribución de las vistas según el rol queda de la siguiente manera:
