--- a/Formato Memoria/Capitulo6/6.2_Aplicacion_Obtenida.tex
+++ b/Formato Memoria/Capitulo6/6.2_Aplicacion_Obtenida.tex
@@ -66,9 +66,22 @@ A continuación se describe el producto obtenido, siguiendo las diferentes fases
     \caption{\label{fig: Resolucion}Vista que muestra el resumen de los datos ingresados para la solicitud y obtiene los datos principales de la RU.}
 \end{figure}
 
-\paragraph{Rendición: } Tras la aceptación de la Solicitud y el ingreso de los datos de la RU que la aprueba, se procede a realizar la Rendición correspondiente al evento. Si bien los datos principales de la Rendición tales como el nombre de la organización, el número de la resolución y el responsable del evento, entre otros, se obtiene automáticamente de los datos registrados en el sistema, el monto total rendido tiene dependencia del registro de documentos (boletas y/o facturas).
+\paragraph{Rendición: } Tras la aceptación de la Solicitud y el ingreso de los datos de la RU que la aprueba, se procede a realizar la Rendición correspondiente al evento. Si bien los datos principales de la Rendición tales como el nombre de la organización, el número de la resolución y el responsable del evento, entre otros, se obtiene automáticamente de los datos registrados en el sistema, el monto total rendido tiene dependencia del registro de documentos (boletas y/o facturas) (vea \textbf{Figura \ref{fig: Rendicion}}).
 
-    \subparagraph{\emph{Documento: }} Sección en donde se ingresan los datos de una boleta y/o factura, que corresponden al número del documento, la categoría en que incurrieron los gatos, la fecha de compra de los productos, el monto, una pequeña descripción de los gastos y el proveedor, entre otros.
+\begin{figure}[h]
+    \centering
+    \includegraphics[width= \textwidth]{Imagenes/Rendicion.png}
+    \caption{\label{fig: Rendicion}Vista que muestra los datos principales de una rendición o solicitud de reembolso.}
+\end{figure}
+
+
+    \subparagraph{\emph{Documento: }} Sección en donde se ingresan los datos de una boleta y/o factura, que corresponden al número del documento, la categoría en que incurrieron los gatos, la fecha de compra de los productos, el monto, una pequeña descripción de los gastos y el proveedor, entre otros (vea \textbf{Figura \ref{fig: AgregarBoletas}}).
+
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width= \textwidth]{Imagenes/AgregarBoletas.PNG}
+        \caption{\label{fig: AgregarBoletas}Vista que obtiene los datos de una boleta o factura.}
+    \end{figure}
 
 
 
