--- a/Formato Memoria/Resumen.tex
+++ b/Formato Memoria/Resumen.tex
@@ -1,25 +1,25 @@
 \begin{resumen}
 
     %Marco general: 2 a 3 lineas contando el marco general, contexto o motivacion del problema.
-
-    El problema que esta memoria resuelve surge cuando el autor se encontraba en calidad de Presidente del Centro de Alumnos de Ingeniería Civil en Computación de la Universidad de Talca.
     
     %Definicion o planteamiento del problema: 3 a 5 lineas en donde cuentan cual es el problema que efectivamente estas enfrentando.
+    Las Organizaciones Estudiantiles (OEs) de la Universidad de Talca se encargan de gestionar muchas actividades tales como la bienvenida de los alumnos de primer año o el aniversario de carrera, entre otras. Dado lo anterior, la casa de Estudio en su plan estratégico \emph{Visión 2020} destaca el apoyo a estas actividades aportando monetariamente para su gestión. Pero al momento de dar cuentas de los gastos del evento, si es rechazada por Tesorería a la hora de ser revisado, esta no envía una notificación con todos los errores, sino que usualmente notifica sólo el primer error detectado provocando el retraso tanto del reembolso del dinero como de otras actividades planificadas por la OE. Por consecuencia, no se pueden realizar nuevas Solicitudes de Fondos por parte de la OE mientras no culmine la Rendición pendiente.
+
+
     
-    El principal problema que existía en ese tiempo era que, si se rechaza una Rendición que justifica los gastos realizados en un evento por una Organización Estudiantil(OE) en Tesorería al momento de su revisión, esta no envía una notificación con los errores detectados, sino que usualmente notifica el primer error provocando el retraso tanto del reembolso del dinero como de otras actividades planificadas por la OE. Por consecuencia, no se pueden realizar nuevas Solicitudes de Fondos por parte de la OE mientras no culmine la Rendición pendiente.
+    %El principal problema que existía en ese tiempo era que, si se rechaza una Rendición que justifica los gastos realizados en un evento por una Organización Estudiantil (OE) en Tesorería al momento de su revisión, esta no envía una notificación con los errores detectados, sino que usualmente notifica el primer error provocando el retraso tanto del reembolso del dinero como de otras actividades planificadas por la OE. Por consecuencia, no se pueden realizar nuevas Solicitudes de Fondos por parte de la OE mientras no culmine la Rendición pendiente.
 
     %El inconveniente nace cuando una Rendición que justifica los gastos realizados en un evento por una Organización Estudiantil es rechazada por Tesorería al momento de su revisión. Esta entidad no envía una notificación con los errores detectados, sino que usualmente notifica el primer error, provocando el retraso tanto del reembolso del dinero como de otras actividades planificadas por la Organizacion Estudiantil ya que no se pueden realizar nuevas Solicitudes de Fondos mientras no culmine la Rendición pendiente.
     
     %Metodologia: 3 a 5 lineas en que hablas de la metodologia de trabajo.
-    Tras lo expuesto anteriormente es que se realiza una plataforma web. Para su construcción se utiliza la metodología de desarrollo ágil \emph{Scrum}, debido a que permite la adaptación al cambio a medida que se desarrolla el sistema en conjunto con retroalimentaciones que brindan los usuarios.
-    
+    En este proyecto se desarrolla una plataforma web para dar solución al problema de las rendiciones, utilizando Scrum como metodología de desarrollo de software.
+
     %Antecedentes o Marco teorico: 3 a 8 lineas de cosas previas o relacionadas que hay que saber antes de enfrentar el resto del resumen.
 
     %Existen tres tipos de Organizaciones Estudiantiles las cuales son: Federación de Estudiantes, Centros de Alumnos y Grupos Intermedios. Pero esta herramienta está enfocada para que asista en el proceso de Solicitud de Fondos por Rendir para las dos primeras Organizaciones.
-    
+   
     %Desarrollo: 3 a 5 lineas explicando como resolviste el problema.
-
-    Para resolver el problema se realizan encuestas a los clientes con el fin de obtener las características del sistema y el modelo de contexto para mayor comprensión del actual sistema. Luego, estas características son categorizadas de acuerdo con la utilidad que preste (planificación de un \emph{Sprint}). Además, se realiza el diseño de la aplicación la cual comprende la confección del mapa de navegación, diseño de interfaz, la arquitectura y el modelo relacional del sistema.
+    Como primer paso, se realizan encuestas a los clientes con el fin de obtener las características del sistema a desarrollar y el modelo de contexto del mecanismo actual de rendiciones. Luego, estas características son categorizadas de acuerdo con la utilidad que presta (planificación de un \emph{Sprint}). Además, se realiza el diseño de la aplicación la cual comprende la confección del mapa de navegación, el diseño de interfaces, la arquitectura y el modelo relacional del sistema.
 
     %Para resolver el problema se realizan encuestas a los clientes con el fin de obtener las características del sistema y el modelo de contexto para la mayor comprensión del actual sistema. Luego, estas características son categorizadas de acuerdo con la utilidad que preste (planificación de un \emph{Sprint}). Además, se realiza el diseño de la aplicación la cual comprende la confección del mapa de navegación, diseño de interfaz, la arquitectura y el modelo relacional del sistema. 
     
@@ -39,7 +39,7 @@
 
     %Conclusiones: 2 a 5 lineas donde esbozan los elementos mas importantes de las conclusiones de vuestro trabajo.
     
-    Para concluir, se obtuvo una aplicación la cual asiste en el proceso de Solicitud y Rendición de un Fondo la cual está bajo los estándares impuestos por la Casa de Estudio. Como consecuencia de lo anterior, permite reducir los errores que podrían rechazar las Rendiciones.
+    Para concluir, se obtiene una aplicación que asiste en el proceso de Solicitud y Rendición de un Fondo la cual cumple con los estándares impuestos por la Casa de Estudio. Como consecuencia de lo anterior, permite reducir los errores que podrían rechazar las Rendiciones.
 
     %Para concluir, se afirma que la aplicación tiene muchas opciones de mejora para obtener una herramienta la cual asista en el proceso de Solicitud y Rendición de un Fondo con mayor fiabilidad de resultados. Sin embargo, la aplicación contempla las funcionalidades principales y sigue los estándares impuestos por la Casa de Estudio. Como consecuencia de lo anterior, permite reducir los errores que podrían rechazar las Rendiciones.
 
