--- a/Formato Memoria/memoria.tex
+++ b/Formato Memoria/memoria.tex
@@ -188,11 +188,11 @@ Dedicado a ...
 			\label{sec:Iteracion}
 			\subfile{Capitulo3/3.2.2.2_Iteracion}
 
-		\subsubsection{Reuniones}
-		\subfile{Capitulo3/3.2.3_Reuniones}
+			\subsubsection{Reuniones}
+			\subfile{Capitulo3/3.2.2.3_Reuniones}
 
 		\subsection{Cómo se trabajó}
-		\subfile{Capitulo3/3.2.4_Trabajo}
+		\subfile{Capitulo3/3.2.3_Trabajo}
 	
 %% contenido del Cuarto capítulo
 \chapter{Características del sistema}
@@ -203,13 +203,17 @@ Dedicado a ...
 	\subfile{Capitulo4/4.1_AspectosGenerales}
 
 	\section{Modelos de contexto de solicitudes}
+	\label{sec: Contexto_Solicitud}
 	\subfile{Capitulo4/4.2_Modelos_Contexto_Solicitud.tex}
 
 	\section{Características generales del software}
 	\subfile{Capitulo4/4.3_CaracteristicasGenerales}
 
+	\section{Errores frecuentes de la Gestión Manual de Fondos}
+	\subfile{Capitulo4/4.4_Errores}
+
 	\section{Planificación de las iteraciones}
-	\subfile{Capitulo4/4.4_Planificacion}
+	\subfile{Capitulo4/4.5_Planificacion}
 
 %% contenido del quinto capítulo
 \chapter{Diseño de la aplicación}
