--- a/Formato Memoria/Capitulo2/2.4.4_Artefactos.tex
+++ b/Formato Memoria/Capitulo2/2.4.4_Artefactos.tex
@@ -1,17 +1,19 @@
 \begin{itemize}
     \item   \begin{description}
 
-                \item[Backlog o retrasos: ] Lista de todas las historias de usuarios que se pretenden resolver durante el desarrollo del proyecto. El PO evalúa los retrasos y actualiza las prioridades de esta lista de acuerdo con lo requerido.
+                \item[Backlog: ] Lista de historias de usuarios que constituyen al proyecto. El PO evalúa estas historias y le da prioridad de esta lista de acuerdo con lo requerido.
                 
-                Existen tres tipos, los cuales son el product backlog (retraso del producto), el backlog de versión o release backlog y por último el backlog de sprint (retraso de sprint), los que se muestran con mayor detalle a continuación:
+                Existen tres tipos de backlogs, el product backlog, el backlog de versión o release backlog y por último el backlog de sprint, los que se muestran con mayor detalle a continuación:
                 
                 \begin{description}
-                    \item[Product backlog: ] Lista de historias de usuarios o características del proyecto los cuales proporcionan valor comercial para los stakeholders. Estas historias de usuarios son de alto nivel y no pueden tener detalles de implementación o técnicos. Además, están asociados a una estimación de tiempo y son especificados según los criterios de la organización.
+                    \item[Product backlog: ] Lista de historias de usuarios o características del proyecto los cuales proporcionan valor comercial para los stakeholders. Estas historias de usuario se caracterizan por ser de alto nivel y no tienen detalles de implementación o técnicos.
                         
-                    \item[Backlog de versión: ]  Consiste en una sub lista de tareas extraídas del backlog del producto, las cuales son priorizadas por el product owner y que deben desarrollarse para la siguiente versión del producto. Estas deben ser más detalladas, con mayor precisión en cuanto al tiempo en que demorará en desarrollarse y puede tener observaciones realizadas por los miembros del equipo.
+                    \item[Backlog de versión: ]  Consiste en una sub lista de tareas extraídas del backlog del producto, las cuales son priorizadas por el product owner y deben desarrollarse para la siguiente versión del producto. Estas deben ser más detalladas, con mayor precisión en cuanto al tiempo de desarrollo y puede tener observaciones realizadas por los miembros del equipo.
                         
                     \item[Backlog del sprint: ] Son tareas que provienen del backlog de versión y que pueden completarse en periodos cortos de tiempo. En cuanto al desarrollo de estas, deben completarse hasta el final del sprint por los equipos que se comprometieron en realizarlas.
                 \end{description} 
+
+                Aquellas historias de usuarios que no son completadas en su tiempo planificado, se devuelven al backlog donde son evaluadas nuevamente por el PO.
             \end{description}    
 
     \item   \begin{description}
