--- a/Formato Memoria/Capitulo2/2.4_Metodologia_Agil.tex
+++ b/Formato Memoria/Capitulo2/2.4_Metodologia_Agil.tex
@@ -1,4 +1,4 @@
-Tras las constantes fallas en los proyectos de desarrollo antes del año 2001, es que en esta fecha Kent Beck y otros 16 notables desarrolladores de software, escritores y consultores (grupo conocido como la ``Alianza ágil''), firman el ``Manifiesto por el desarrollo ágil de software'', el cual define valores y principios que deben estar presente en la metodología ágil, con el fin de mejorar la forma de desarrollar software, cuyos principios son:
+Tras las constantes fallas en los proyectos de desarrollo antes del año 2001, es que en este año Kent Beck y otros 16 notables desarrolladores de software, escritores y consultores (grupo conocido como la ``Alianza ágil''), firman el ``Manifiesto por el desarrollo ágil de software'', el cual define valores y principios que deben estar presente en la metodología ágil, con el fin de mejorar la forma de desarrollar software, cuyos principios son:
 
 \begin{itemize}
     \item Valorar al individuo y las interacciones del equipo de desarrollo por sobre el proceso y las herramientas.
@@ -22,6 +22,6 @@ Cabe destacar que la metodología ágil se caracteriza por:
     \item Rápido retorno de la inversión debido a las constantes entregas parciales en las cuales se muestra las funcionalidades principales del producto, haciendo que la rentabilidad de la inversión sea de manera más acelerada.
 \end{itemize}
 
-Existen muchas metodologías, pero con distintas orientaciones acerca de cómo llevar a cabo el proceso de desarrollo de software. Entre ellas se encuentran \emph{Scrum} (marco de trabajo seleccionado para el desarrollo del proyecto, el cual se describe más adelante), XP (eXtreme Programming), Métodos Crystal, FDD (Feature Driven Development), ASD (Adaptive Software Development), RUP (Rational Unified Process), etc.
+Existen muchas metodologías, cada una con distintas orientaciones acerca de cómo llevar a cabo el proceso de desarrollo de software. Entre ellas se encuentran \emph{Scrum} (marco de trabajo seleccionado para el desarrollo del proyecto, el cual se describe más adelante), XP (eXtreme Programming), Métodos Crystal, FDD (Feature Driven Development), ASD (Adaptive Software Development), RUP (Rational Unified Process), etc.
 
 De todos los métodos ágiles mencionados anteriormente se escoge Scrum. Es por ello que se describe en las siguientes secciones, explicando de que trata, cuáles son los roles que se deben cumplir para que funcione el método, los artefactos que dan vida al proyecto, las reuniones las cuales ayudan a ver la planificación; problemas y avances del producto y, por último, el ciclo de vida que tiene Scrum.
