--- a/Formato Memoria/Capitulo2/2.5_Pruebas.tex
+++ b/Formato Memoria/Capitulo2/2.5_Pruebas.tex
@@ -1,5 +1,6 @@
-Para el proyecto, se utiliza como método de evaluación la metodología con experimentos controlados. Esta maneja pruebas que se hacen bajo condiciones totalmente constantes y en algunos casos, puede variar algún factor. El objetivo principal es realizar un muestreo de usuarios conocidos los cuales utilizan el software con pruebas de usabilidad simples, además del cliente.
+
+La metodología con experimentos controlados se utiliza como método de evaluación del proyecto. Esta metodología maneja pruebas que se hacen bajo condiciones totalmente constantes aunque en algunos casos puede variar algún factor. Este persigue realizar un muestreo de usuarios conocidos los cuales utilizan el software con pruebas de usabilidad simples.
 
 Por otra parte, los usuarios que realicen las pruebas de usabilidad no necesariamente deben ser los mismos.
 
-Para finalizar, el motivo por el cual se escoge esta metodología de evaluación se debe a que hace posible la comprensión e identificación de las variables que están siendo utilizadas en la construcción del software.  Todo lo anterior se debe ya que, según el artículo \emph{Albert Einstein and Empirical Software Engineering}~\cite{8}, experimentar con la construcción de software permite ``Aumentar la compresión de lo que hace al software bueno y cómo hacer un software bien''\footnote{El texto original de esta cita es \emph{Gain more understanding of what makes software ``good'' and how to make software well}~\cite{8}.}.
+Para finalizar, esta metodología de evaluación hace posible la comprensión e identificación de las variables que están siendo utilizadas en la construcción del software.  Todo lo anterior se debe ya que, según el artículo \emph{Albert Einstein and Empirical Software Engineering}~\cite{8}, experimentar con la construcción de software permite ``Aumentar la compresión de lo que hace al software bueno y cómo hacer un software bien''\footnote{El texto original de esta cita es \emph{Gain more understanding of what makes software ``good'' and how to make software well}~\cite{8}.}.
